# NeuraSense

./: .gitignore  PROJECT_BRIEF.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  test_api.py  test_counselor.py  test_gemini.py  test_phenotyping.py  test_zhipu.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  assessments_router.py  checkin_router.py  community_router.py  ema_router.py  exercises_router.py  jitai_router.py  journal_router.py  memory_router.py  miniprogram_auth.py  notifications_router.py  phenotyping_router.py  prediction_router.py  profile_router.py  programs_router.py  tools_router.py  validation_router.py  wechat_auth_router.py
backend/app/data/memory/: memory_294de3557d9d00b3.json
backend/app/domain/: __init__.py
backend/app/services/: __init__.py  recommendation.py
backend/app/services/assessment/: __init__.py  stealth_phq9.py
backend/app/services/auth/: __init__.py  auth_service.py  wechat_oauth.py
backend/app/services/chat/: __init__.py  unified_chat.py
backend/app/utils/: __init__.py  encryption.py
backend/data/: assessment_history.json  assessments_catalog.json  community_posts.json  jitai_interventions.json  jitai_rules.json  journals.json  program_days.json  programs.json  sessions.json  tool_items.json  tool_items_v2.json  users.json
backend/sql/: 001_user_profile.sql  002_tool_items.sql  003_daily_checkins.sql  004_programs.sql  005_assessments.sql  006_exercises.sql  007_memory_vectors.sql  008_recommendation_log.sql  009_notifications.sql
miniprogram/: app.js  (+3 more)
(+159 files in other folders)
